Fixed attendee list alignment on smartphones

--- a/public/styles/attendees.styl
+++ b/public/styles/attendees.styl
@@ -14,7 +14,7 @@
 				display inline-block
 
 				.last {
-					padding-right 7px
+					padding-right 3px
 					font-weight 600
 				}
 				.first {
@@ -38,6 +38,7 @@
 	.registration .info.whos-coming {
 		max-width 500px
 		padding 10px 0px
+		font-size 120%
 		
 		.attendees-block .attendee-container {
 			padding-top 10px
@@ -51,6 +52,7 @@
 			.left {
 				border-top 1px solid grey
 				padding-top 5px
+				width 100%
 			}
 		}
 	}
